--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -4,6 +4,11 @@
   <div>
     <label>name:
       <input [(ngModel)]="hero.name" placeholder="name"/>
+    </label>    
+  </div>
+<div>
+  <label>ages:
+      <input [(ngModel)]="hero.ages" placeholder="ages"/>
     </label>
   </div>
   <button (click)="goBack()">go back</button>
